--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,38 @@
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
+inherit_from: .rubocop_todo.yml
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+require:
+  - rubocop-performance
+  - rubocop-rspec
+
+AllCops:
+  TargetRubyVersion: 2.6
+  NewCops: enable
 
 Layout/LineLength:
-  Max: 120
+  Max: 100
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'redis_object_counter.gemspec'
+
+Metrics/MethodLength:
+  Max: 15
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
+
+RSpec/ExampleLength:
+  Max: 10
+
+RSpec/NestedGroups:
+  Max: 5
+
+RSpec/MultipleExpectations:
+  Max: 4
