--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,31 +5,32 @@
 version: 2.1
 
 orbs:
-  ruby-orbs: sue445/ruby-orbs@1.6.0
+  ruby-orbs: sue445/ruby-orbs@1.6.2
   code-climate: rvla/code-climate@0.0.2
 
 references:
   - &ruby_version
     ruby_version:
       type: enum
-      enum: &ruby_version_enum ['2.6', '2.7', '3.0']
+      enum: ['2.6', '2.7', '3.0']
       default: '3.0'
 
 executors:
-  gem_executor:
+  default:
     parameters:
       <<: *ruby_version
     docker:
-       - image: circleci/ruby:<< parameters.ruby_version >>
+      - image: circleci/ruby:<< parameters.ruby_version >>
+      - image: redis:latest
+        name: redis
     working_directory: ~/repo
 
 commands:
-  run_rspec_for_gem:
-    description: Run RSpec for the gem
+  run_rspec:
+    description: 'Run RSpec'
     steps:
-      - code-climate/install
       - run:
-          name: Execute RSpec
+          name: 'Execute RSpec'
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
@@ -96,57 +97,57 @@ commands:
     parameters:
       <<: *ruby_version
     steps:
-      - checkout:
-          path: ~/repo
+      - checkout
       - run:
           name: Install Bundler 2.x
-          command: gem install bundler -v '~> 2.0'
+          command: gem install bundler:2.1.4
       - ruby-orbs/bundle-install:
           cache_key_prefix: v1-dependencies-<< parameters.ruby_version >>
-          restore_bundled_with: false
-  test_and_build_for_gem:
-    description: Test and build the RubyGem
+  test_and_build:
+    description: Build the RubyGem
     steps:
-      - run_rspec_for_gem
+      - code-climate/install
+      - run_rspec
       - rake_build
 
 jobs:
-  build_gem:
+  build:
     parameters:
       <<: *ruby_version
     executor:
-      name: gem_executor
+      name: default
       ruby_version: << parameters.ruby_version >>
     steps:
       - setup:
           ruby_version: << parameters.ruby_version >>
+      - test_and_build
   upload-coverage:
-    executor: gem_executor
+    executor: default
     steps:
       - attach_workspace:
           at: ~/repo
       - code-climate/install
       - code-climate/sum-coverage:
           input: codeclimate.*.json
-          parts: 18
+          parts: 3
       - code-climate/upload-coverage
   rubocop:
-    executor: gem_executor
+    executor: default
     steps:
       - setup
       - rubocop
   yardoc:
-    executor: gem_executor
+    executor: default
     steps:
       - setup
       - yardoc
   rubocop_challenge:
-    executor: gem_executor
+    executor: default
     steps:
       - checkout
       - rubocop_challenge
   release:
-    executor: gem_executor
+    executor: default
     steps:
       - setup
       - release
@@ -156,25 +157,33 @@ workflows:
 
   commit:
     jobs:
-      - build_gem:
-          name: build_on_ruby_<< matrix.ruby_version >>
-          matrix:
-            parameters:
-              ruby_version: *ruby_version_enum
+      - build:
+          name: build_on_ruby_2.6
+          ruby_version: '2.6'
+      - build:
+          name: build_on_ruby_2.7
+          ruby_version: '2.7'
+      - build:
+          name: build_on_ruby_3.0
+          ruby_version: '3.0'
       - rubocop
       - yardoc
       - upload-coverage:
           requires:
-            - build_gem
+            - build_on_ruby_2.6
+            - build_on_ruby_2.7
+            - build_on_ruby_3.0
       - release:
           context: RubyGems API Key
           requires:
-            - build_gem
+            - build_on_ruby_2.6
+            - build_on_ruby_2.7
+            - build_on_ruby_3.0
             - rubocop
           filters:
             branches:
               only:
-                - release
+                - production
 
   challenge:
     triggers:
@@ -182,7 +191,8 @@ workflows:
           cron: "30 23 * * *" # 8:30am every day (JST)
           filters:
             branches:
-              only: [master]
+              only:
+                - master
     jobs:
       - rubocop_challenge
 
@@ -191,4 +201,4 @@ experimental:
     branches:
       only:
         - master
-        - release
+        - production
