--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,10 @@ Metrics/BlockLength:
 Metrics/MethodLength:
   Max: 15
 
+Naming/FileName:
+  Exclude:
+    - 'lib/redis-object-daily-counter.rb'
+
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
 
