--- a/.gem_comet.yml
+++ b/.gem_comet.yml
@@ -17,5 +17,8 @@ changelog:
   categories:
     - Feature
     - Bugfix
+    - Security
     - Breaking Change
+    - Rubocop Challenge
+    - Dependabot
     - Misc
