--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ references:
   - &ruby_version
     ruby_version:
       type: enum
-      enum: ['2.6', '2.7', '3.0']
-      default: '3.0'
+      enum: ["2.6", "2.7", "3.0"]
+      default: "3.0"
 
 executors:
   default:
@@ -27,10 +27,10 @@ executors:
 
 commands:
   run_rspec:
-    description: 'Run RSpec'
+    description: "Run RSpec"
     steps:
       - run:
-          name: 'Execute RSpec'
+          name: "Execute RSpec"
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
@@ -60,7 +60,7 @@ commands:
           name: Run RuboCop
           command: bundle exec rubocop
   yardoc:
-    description: 'Generate YARDoc'
+    description: "Generate YARDoc"
     steps:
       - run: bundle exec yardoc -o ./yardoc
       - store_artifacts:
@@ -159,13 +159,13 @@ workflows:
     jobs:
       - build:
           name: build_on_ruby_2.6
-          ruby_version: '2.6'
+          ruby_version: "2.6"
       - build:
           name: build_on_ruby_2.7
-          ruby_version: '2.7'
+          ruby_version: "2.7"
       - build:
           name: build_on_ruby_3.0
-          ruby_version: '3.0'
+          ruby_version: "3.0"
       - rubocop
       - yardoc
       - upload-coverage:
