--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,7 @@ require:
   - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.7
   NewCops: enable
 
 Layout/LineLength:
@@ -13,15 +13,15 @@ Layout/LineLength:
 
 Metrics/BlockLength:
   Exclude:
-    - 'spec/**/*'
-    - 'redis-objects-daily-counter.gemspec'
+    - "spec/**/*"
+    - "redis-objects-daily-counter.gemspec"
 
 Metrics/MethodLength:
   Max: 15
 
 Naming/FileName:
   Exclude:
-    - 'lib/redis-objects-daily-counter.rb'
+    - "lib/redis-objects-daily-counter.rb"
 
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
